--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -12,7 +12,7 @@ html(lang = "es")
                 li
                     a(href = "/admin/users") Trabajadores
                 li
-                    a(href="/admin/cuentas") Cuentas
+                    a(href="/admin/bills") Cuentas
                 li 
                     a(href ="/admin/produccion") Producción
                 li
