cuentas Casi listo

--- a/views/admin/bills/bills.pug
+++ b/views/admin/bills/bills.pug
@@ -25,5 +25,7 @@ block contenido
         .row.bigTopSpace
             .col-md-4
                 a(href ="/admin/bills/newP",class= "btn btn-default btn-lg") Nuevo Proveedor
+            .col-md-4
+                a(href ="/admin/bills/showP",class= "btn btn-default btn-lg") Ver Proveedores
             .col-md-2
                 a(href ="/admin/bills/newC",class= "btn btn-default btn-lg") Nueva Cuenta
