--- a/views/admin/bills/bills.pug
+++ b/views/admin/bills/bills.pug
@@ -22,7 +22,7 @@ block contenido
                         a(href='/admin/bills/'+x.id+'/edit',class= "btn btn-primary") Editar
                         form(action='/admin/bills/'+x.id+'?_method=DELETE' class = "link" method = "POST")
                             input(type = "submit" value = "eliminar" class="btn btn-danger")
-        .row.bigTopSpace
+        .row.topSpace
             .col-md-4
                 a(href ="/admin/bills/newP",class= "btn btn-default btn-lg") Nuevo Proveedor
             .col-md-4
