--- a/views/admin/bills/showP.pug
+++ b/views/admin/bills/showP.pug
@@ -2,7 +2,7 @@ extends ./layout.pug
 
 
 block contenido
-    .col-md-8.removeFloat.center-block.text-center.bigTopSpace
+    .col-md-8.removeFloat.center-block.text-center.topSpace
         .row 
             .col-md-3
                 h1 Nombre
