--- a/views/admin/bills/newP.pug
+++ b/views/admin/bills/newP.pug
@@ -3,22 +3,22 @@ extends ./layout.pug
 block contenido
     .col-md-8.removeFloat.center-block.text-center.TopSpace
         h1 Nuevo Proveedor
-        form(name="p" action="/admin/cuenta" , method="POST" enctype="multipart/form-data")
+        form(name="p" action="/admin/bills" , method="POST" enctype="multipart/form-data")
             div(class = "form-group")
                 label(for="cedula") RUT
-                input(type = "text", name = "rut",placeholder = "rut",id="rut", class = "form-control")
+                input(type = "text", name = "rut",placeholder = "rut",id="rut", class = "form-control" required="")
             div
                 label(for="nombre") Nombre
-                input(type = "text", name = "nombre",id = "nombre" class = "form-control")
+                input(type = "text", name = "nombre",id = "nombre" class = "form-control" required="")
             div
                 label(for="nombre") Direccion
-                input(type = "text", name = "direccion",id = "direccion" class = "form-control")
+                input(type = "text", name = "direccion",id = "direccion" class = "form-control" required="")
             div
                 label(for="nombre") telefono
-                input(type = "text", name = "telefono",id = "telefono" class = "form-control")
+                input(type = "text", name = "telefono",id = "telefono" class = "form-control" required="")
             div
                 label(for="nombre") ciudad
-                input(type = "text", name = "ciudad",id = "ciudad" class = "form-control")
+                input(type = "text", name = "ciudad",id = "ciudad" class = "form-control" required="")
             div(class="row topSpace")
                 div(class="col-sm-10 col-xs-10 text-left")
                     input(type = "submit"  value = "Enviar" class = "btn btn-info")
