--- a/views/worker/layout.pug
+++ b/views/worker/layout.pug
@@ -4,11 +4,12 @@ html(lang = "es")
         title Andapez
         meta(charset= " utf-8")
         link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
-        link( href = "../public/css/app.css" rel ="stylesheet")
-        link( href = "../public/css/animate.css" rel ="stylesheet")
-    body 
-        nav(class = "large-padding black white-text")
+        link( href = "../../../public/css/app.css" rel ="stylesheet")
+        link( href = "../../../public/css/animate.css" rel ="stylesheet")
+    body
+        nav(class = "large-padding black white-text a")
             ul
                 li
-                    a(href = "/" class ="main") Home
+                    a(href = "/worker/logout") Salir
+                    
         block contenido
